# jogo-simao

./: A - Coisas a se saber.txt  Andino.cpp  Andino.h  Angrath.cpp  Angrath.h  Animadora.cpp  Animadora.h  Atiradino.cpp  Atiradino.h  CMakeCache.txt  CMakeLists.txt  Carnivora.cpp  Carnivora.h  ChefeDino.cpp  ChefeDino.h  Chefe_Arvore.h  Colisora.cpp  Colisora.h  Corpo_Grafico.cpp  Corpo_Grafico.h  Dino++  Ent.cpp  Entidade.cpp  Entidade.h  Espinho.cpp  Estado.cpp  Estado.h  FabricaFase.cpp  FabricaFase.h  FabricaFloresta.cpp  FabricaFloresta.h  FabricaMontanha.cpp  FabricaMontanha.h  Fase.cpp  Fase.h  FaseEstado.cpp  FaseEstado.h  Floresta.cpp  Floresta.h  FlorestaEstado.cpp  (+54 more)
3 - Movimentação/: 3 - Movimentacao.cbp  3 - Movimentacao.depend  3 - Movimentacao.layout  main.cpp
Arquivos/: Plataformas.txt  PlataformasFloresta.txt  PlataformasMontanha.txt
Executável/: Leia-me.txt
UML/: Diagrama UML.mdj
header/: Colisora.h  Corpo_Grafico.h  Ent.h  Entidade.h  Fase.h  Floresta.h  Gerenciador_Grafico.h  Huatli.h  Jogo.h  ListaEntidade.h  Menu.h  Montanha.h  Obstaculo.h  Personagem.h  Plataforma.h  Projetil.h  stdafx.h
src/: Andino.cpp  Andino.h  Angrath.cpp  Angrath.h  Animadora.cpp  Animadora.h  Atiradino.cpp  Atiradino.h  Carnivora.cpp  Colisora.cpp  Corpo_Grafico.cpp  Corpo_Grafico.h  Ent.cpp  Ent.h  Entidade.cpp  Entidade.h  Fase.cpp  Fase.h  Fundo.h  Galhos.cpp  Galhos.h  Gerenciador_Grafico.cpp  Huatli.cpp  Huatli.h  Inimigo.cpp  Inimigo.h  Jogador.cpp  Jogador.h  Jogo.cpp  Jogo.h  ListaEntidade.cpp  Menu.cpp  Menu.h  MenuEstado.h  MenuPause.cpp  MenuPrincipal.cpp  (+11 more)
(+17 files in other folders)
